--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "react": "17.0.2",
-    "react-native": "0.66.0",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native": "0.66.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
