--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.25.0",
     "react": "17.0.2",
-    "react-native": "0.66.0"
+    "react-native": "0.66.0",
+    "react-native-inappbrowser-reborn": "^3.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
